[gd_scene load_steps=16 format=3 uid="uid://iy8u3e64wbid"]

[ext_resource type="Script" path="res://Scripts/Enemies/FSM/FSM.gd" id="1_8fnjs"]
[ext_resource type="Texture2D" uid="uid://ufii5t7brdw" path="res://Art/BODD/d2Sheet.png" id="1_ddij0"]
[ext_resource type="Script" path="res://Scripts/Enemies/FSM/BOSSDOGS/DOG2/dog_2.gd" id="1_ohisg"]
[ext_resource type="Script" path="res://Scenes/Base/Enemies/BOSS/Idle_D2.gd" id="3_gj50x"]
[ext_resource type="Script" path="res://Scenes/Base/Enemies/BOSS/AttackD2.gd" id="4_j6xoq"]
[ext_resource type="Script" path="res://Scenes/Base/Enemies/BOSS/Wander.gd" id="6_ypy34"]
[ext_resource type="Script" path="res://Scenes/Base/Enemies/BOSS/Death.gd" id="7_ooclh"]

[sub_resource type="Animation" id="Animation_07pkf"]
resource_name = "Attack"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0719247, 0.143849, 0.220207, 0.29952, 0.375878, 0.453713, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fhq3e"]
resource_name = "Death"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_gfrou"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gt6u5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yjbn0"]
resource_name = "Stunt"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D/Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 2.2974),
"update": 0,
"values": [6.19592, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sasb4"]
_data = {
"Attack": SubResource("Animation_07pkf"),
"Death": SubResource("Animation_fhq3e"),
"Idle": SubResource("Animation_gfrou"),
"RESET": SubResource("Animation_gt6u5"),
"Stunt": SubResource("Animation_yjbn0")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iwq27"]
radius = 30.0
height = 106.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c35ei"]
radius = 53.0094

[node name="Dog2" type="CharacterBody2D"]
position = Vector2(2, 0)
script = ExtResource("1_ohisg")

[node name="Node2D" type="Node2D" parent="."]
rotation = -1.5708

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
texture_filter = 1
texture = ExtResource("1_ddij0")
hframes = 7
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sasb4")
}
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_iwq27")

[node name="Detector1" type="RayCast2D" parent="."]
position = Vector2(-281, 0)
target_position = Vector2(550, 0)

[node name="Detector2" type="RayCast2D" parent="."]
position = Vector2(0, -270)
target_position = Vector2(0, 550)

[node name="debug" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = 73.0
offset_right = 19.0
offset_bottom = 96.0
text = "debug
"

[node name="FSM" type="Node2D" parent="."]
script = ExtResource("1_8fnjs")
attack = 100

[node name="Idle" type="Node2D" parent="FSM"]
script = ExtResource("3_gj50x")

[node name="Attack" type="Node2D" parent="FSM"]
script = ExtResource("4_j6xoq")

[node name="Stunt" type="Node2D" parent="FSM"]
script = ExtResource("6_ypy34")

[node name="Death" type="Node2D" parent="FSM"]
script = ExtResource("7_ooclh")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_c35ei")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
